# doge-connect

./: .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml
dispatcher/: CMakeLists.txt  README.md  config.json.example  test_dispatcher_config.json.example  test_miner_config.json.example  test_scrypt.cpp
dispatcher/src/: CMakeLists.txt  dispatcher.cpp  log.h  structs.h
dispatcher/src/concurrency/: concurrent_hashmap.h  concurrent_queue.h
dispatcher/src/config/: config.cpp  config.h
dispatcher/src/connection/: connection.cpp  connection.h  qubic_connection.cpp  qubic_connection.h
dispatcher/src/crypto/: dispatcher_signing.cpp  dispatcher_signing.h  key_utils.cpp
dispatcher/src/hash_util/: difficulty.cpp  difficulty.h  hash_util.cpp  hash_util.h  scrypt.c  scrypt.h
dispatcher/src/threads/: input_thread.cpp  input_thread.h  qubic_recv_thread.cpp  qubic_recv_thread.h  share_valid_thread.cpp  share_valid_thread.h  stratum_recv_thread.cpp  stratum_recv_thread.h  task_dist_thread.cpp  task_dist_thread.h
dispatcher/test/: CMakeLists.txt  example_stratum_data.txt
dispatcher/test/testdispatcher/: dummy_stratum_recv_thread.cpp  dummy_stratum_recv_thread.h  test_dispatcher.cpp
dispatcher/test/testminer/: mining_structs.h  mining_thread.cpp  mining_thread.h  task_recv_thread.cpp  task_recv_thread.h  test_miner.cpp
dispatcher/test/testsigning/: test_signing.cpp
foundation-v2-dogecoin/: README.md  package-lock.json  package.json
foundation-v2-dogecoin/configs/: example.js
foundation-v2-dogecoin/daemon/test/: daemon.test.js  interface.test.js
foundation-v2-dogecoin/server/main/: builder.js  loader.js  stratum.js
foundation-v2-dogecoin/server/test/: stratum.test.js  workers.test.js
foundation-v2-dogecoin/stratum/main/: algorithms.js  manager.js  pool.js  template.js  transactions.js
foundation-v2-dogecoin/stratum/test/: manager.test.js  network.test.js  pool.test.js  template.test.js  transactions.test.js
foundation-v2-litecoin/configs/: main.js
foundation-v2-litecoin/server/main/: stratum.js
foundation-v2-litecoin/stratum/main/: algorithms.js  manager.js
relay/: Dockerfile  README.md  Relay.csproj  appsettings.json
relay/src/: ClientRegistry.cs  DemoPage.cs  Program.cs  RedisSubscriberService.cs
stats/: index.html  upload-stats.py
stats/worker/: wrangler.toml
stats/worker/src/: worker.js
tools/: test_oracle  test_oracle.cpp  test_oracle_validation.py
tools/dogeMonitor/: DogeMonitor.csproj  DogeNodeConnection.cs  Program.cs
tools/netBridge/: BridgeRelay.cs  NetBridge.csproj  PacketDeduplicator.cs  Program.cs  appsettings.json
tools/shared/: Doge.Shared.csproj  DogeProtocol.cs  Marshalling.cs  QubicConstants.cs
tools/solutionSimulator/: DogeSolutionSender.cs  Program.cs  SolutionSimulator.csproj
